# Photoshop-MCP-Server

./: .gitignore  README.en.md  README.md  __init__.py  cli.py  requirements.txt
bridge/: platform_utils.py
cluster/: __init__.py
cluster/proto/: __init__.py
docs/: installation.en.md  installation.md  windows_setup.en.md
examples/claude_desktop_integration/: README.en.md  README.md  claude_photoshop_mcp.py
examples/llm_integration/: README.en.md  README.md  adjustment_layer_retouch.py  image_analysis.py  llm_client.py  retouch_generation.py
llm_retouch/: analyzer.py  generator.py  models.py
photoshop_mcp_server/: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  server.py
photoshop_mcp_server/bridge/: __init__.py  applescript_backend.py  path_utils.py  powershell_backend.py  uxp_backend.py
photoshop_mcp_server/cluster/: dispatcher.py  node.py
photoshop_mcp_server/cluster/proto/: photoshop.proto
photoshop_mcp_server/docs/: windows_setup.md
photoshop_mcp_server/llm_retouch/: __init__.py  analyzer.py  executor.py  generator.py
photoshop_mcp_server/llm_retouch/prompts/: __init__.py  analysis.py  retouch.py
photoshop_mcp_server/tests/windows/: test_integration.py  test_powershell_backend.py
photoshop_mcp_server/uxp_plugin/: manifest.json  photoshop_api.js
schema/: __init__.py
utils/: __init__.py  performance.py
uxp_plugin/: index.html  main.js  websocket.js
